<resources>
    <string name="app_name">Spawtify</string>
    <string name="landing_page">Landing Page</string>
    <string name="browse_songs">Browse Songs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_playlists">My Playlists</string>
    <string name="change_password">Change Password</string>
    <string name="secret_admin_stuff">Secret Admin Stuff</string>
    <string name="spawtify_logo">Spawtify_Logo</string>
    <string name="signup">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_displayed_here">username_displayed_here</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="new_song">New Song</string>
    <string name="delete_song">Delete Song</string>
    <string name="edit_song">Edit Song</string>
    <string name="manage_users">Manage Users</string>
    <string name="admin_perks">ADMIN PERKS</string>
    <string name="new_edit_song">New/Edit Song</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="not_explicit">Not Explicit</string>
    <string name="add_song">Add Song</string>
    <string name="explicit">Explicit</string>
    <string name="save_changes">Save Changes</string>
    <string name="song_details_go_here">Song Details Go Here</string>
    <string name="artist_details_go_here">Artist Details Go Here</string>
    <string name="album_details_go_here">Album Details Go Here</string>
    <string name="genre_goes_here">Genre Goes Here</string>
    <string name="explicit_goes_here">Explicit Goes Here</string>
    <string name="logged_in">Logged in</string>
    <string name="song_list">Song List</string>
    <string name="filter">Filter</string>
    <string name="new_playlist">New Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="description">Description</string>
    <string name="click_on_a_playlist_to_view_contained_songs">Click on a playlist to view contained songs</string>
    <string name="create">Create</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="by_artist">By Artist</string>
    <string name="by_album">By Album</string>
    <string name="by_genre">By Genre</string>
    <string name="remove_filters">Remove Filters</string>
    <string name="clean">Clean</string>
    <string name="finish">Finish</string>
    <string name="add_songs">Add songs</string>
    <string name="delete_songs">Delete Songs</string>
    <string name="manage_users_instructions">Manage users instructions</string>
    <string name="make_admin">Make Admin</string>
    <string name="delete_user">Delete User</string>
...
